# ESG

./: .env.example  .gitignore  DECISIONS.md  MODEL.md  Procfile  README.md  SOURCES.md  TRADEOFFS.md  build.sh  generate_csvs.py  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
breatheesg/: asgi.py  auth_views.py  middleware.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ErrorBoundary.tsx  Layout.tsx
frontend/src/components/: ConfirmDialog.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Login.tsx  RecordDetail.tsx  Review.tsx  Upload.tsx
ingestion/: admin.py  models.py  normalizer.py  serializers.py  tests.py  views.py
ingestion/management/commands/: seed_sample_data.py
ingestion/migrations/: 0001_initial.py  0002_userprofile.py
sample_data/: concur_travel_export.csv  sap_fuel_export.csv  utility_green_button.csv
